--- a/Dzbackdor-Link-Shell/manifest.json
+++ b/Dzbackdor-Link-Shell/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Dzbackdor Link Shell",
-  "version": "1.2.0",
-  "description": "Save links, display only anchor text. Click to copy. Sync enabled with Export/Import.",
+  "version": "1.4.0",
+  "description": "Save links, display only anchor text. Click to copy. Sync enabled with Export/Import and Themes.",
   "permissions": ["storage", "clipboardWrite"],
   
   "icons": {
@@ -14,11 +14,7 @@
   
   "action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/favicon.png",
-      "32": "icons/favicon.png",
-      "48": "icons/favicon.png"
-    }
+    "default_icon": "icons/favicon.png"
   },
   
   "options_page": "options.html"
